templates/fargate-sidecar-injector_template.yaml
---
# Source: fargate-sidecar-injector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fargate-sidecar-injector
  labels:
    helm.sh/chart: fargate-sidecar-injector-0.1.5
    app.kubernetes.io/name: fargate-sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: fargate-sidecar-injector
    app.kubernetes.io/instance: release-name
---
# Source: fargate-sidecar-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fargate-sidecar-injector
  labels:
    helm.sh/chart: fargate-sidecar-injector-0.1.5
    app.kubernetes.io/name: fargate-sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fargate-sidecar-injector
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fargate-sidecar-injector
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: fargate-sidecar-injector
      securityContext:
        {}
      containers:
        - name: fargate-sidecar-injector
          securityContext:
            {}
          image: "mziyabo/fargate-eks-sidecar-injector:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8443
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8443
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
          - name: "config"
            mountPath: "/etc/fargatesidecarinjector/"
      volumes:
      - name: config
        configMap:
          name: fargate-sidecar-injector
---
# Source: fargate-sidecar-injector/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-fargate-sidecar-injector-test-connection"
  labels:
    helm.sh/chart: fargate-sidecar-injector-0.1.5
    app.kubernetes.io/name: fargate-sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-fargate-sidecar-injector:8443']
  restartPolicy: Never
---
# Source: fargate-sidecar-injector/templates/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: fargate-sidecar-injector
  annotations:
    "helm.sh/hook": post-install
    "helm.sh/hook-weight": -5"
  labels:
    helm.sh/chart: fargate-sidecar-injector-0.1.5
    app.kubernetes.io/name: fargate-sidecar-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: "fargate-sidecar-injector.default.svc"
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    clientConfig:
      service:
        namespace: default
        name: fargate-sidecar-injector
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUROekNDQWgrZ0F3SUJBZ0lRTmVobXBZaCs4QllsZHhyYWdIZVhrVEFOQmdrcWhraUc5dzBCQVFzRkFEQW0KTVNRd0lnWURWUVFERXh0bVlYSm5ZWFJsTFhOcFpHVmpZWEl0YVc1cVpXTjBiM0l0WTJFd0hoY05NalF3TlRFMQpNRGt5T1RRd1doY05NelF3TlRFek1Ea3lPVFF3V2pBbU1TUXdJZ1lEVlFRREV4dG1ZWEpuWVhSbExYTnBaR1ZqCllYSXRhVzVxWldOMGIzSXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQy8KWDdzaDZySy9YK00zbVUzZ2VhSzNSNG11VUZUOURkck9lSHlZT1UzRnltRXE3SVhBTHlmeHFPSDVqMWc1NXp0eApaQ2pvZVdmbExG [...]
    rules:
      - apiGroups: [""]
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
